[package]
name = "tls-certificate-exporter"
version = "0.0.0"
authors = ["Leo Chen <leo881003@gmail.com>"]
edition = "2021"
rust-version = "1.67.0"
description = "A Prometheus exporter to scrape certificates from remote connections to monitor the certificates."
repository = "https://github.com/Leo1003/tls-certificate-exporter"
license = "Apache-2.0"
# TODO: Set keywords and categories before the first publish
keywords = []
categories = []

[dependencies]
backtrace = { version = "0.3.68", optional = true }
base64 = "0.21.3"
chrono = "0.4.26"
config = "0.13.3"
crossbeam = "0.8.2"
dotenvy = "0.15.7"
duration-str = { version = "0.5.1", default-features = false, features = ["serde"] }
num-bigint = "0.4.4"
pem = "3.0.1"
prometheus = "0.13.3"
rustls-native-certs = { version = "0.6.3", optional = true }
serde = { version = "1.0.184", features = ["derive"] }
serde_bytes = "0.11.12"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trust-dns-resolver = { version = "0.23.0", features = ["tokio-runtime", "system-config", "dns-over-rustls", "dnssec-ring"] }
webpki-roots = "0.25.2"
x509-certificate = "0.21.0"

[dev-dependencies]
